--- a/Widget/app/src/main/res/layout/activity_main.xml
+++ b/Widget/app/src/main/res/layout/activity_main.xml
@@ -60,4 +60,10 @@
         android:layout_height="wrap_content"
         android:text="自定義攝像頭應用"
         android:onClick="click9"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RecyclerView的使用"
+        android:onClick="click10"/>
 </LinearLayout>
