--- a/Widget/app/src/main/res/values/styles.xml
+++ b/Widget/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="android:listDivider">@drawable/item_divider</item>
     </style>
 
 </resources>
